# yoloX_web

./: .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
